--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "bradwurst-bot",
   "version": "1.0.0",
   "description": "A fun all-purpose bot",
-  "main": "client.ts",
+  "main": "Main.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc && node --loader ts-node/esm/transpile-only src/client.ts",
-    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/client.ts",
+    "dev": "tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
+    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
