--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "Main.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
-    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
+    "start": "tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
