--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
-    "dev": "nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
+    "dev": "set NODE_ENV=development&& nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
