--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Main.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
+    "start": "set NODE_ENV=production&& tsc && node --loader ts-node/esm/transpile-only src/Main.ts",
     "dev": "set NODE_ENV=development&& nodemon --exec node --loader ts-node/esm/transpile-only src/Main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
